appId: com.phuocng23000.sdchat
---
- launchApp

- assertVisible: ".*Android Simulator.*"
- tapOn: ".*Android Simulator.*"
- assertVisible: "Android Simulator"
- assertVisible: { id: "files-picker-button" }
- tapOn: { id: "files-picker-button" }
- assertVisible:
    id: "toolbar"
- assertVisible: "Recent files"
- assertVisible:
    point: 0%,21%
- tapOn:
    point: 0%,21%
- assertVisible:
    id: "icon_check"
- assertVisible: "Select"
- tapOn: "Select"
- assertVisible:
    point: 88%,36%

