appId: com.phuocng23000.sdchat
---
- launchApp

- assertVisible: ".*Android Simulator.*"
- tapOn: ".*Android Simulator.*"
- assertVisible: "Android Simulator"
- assertVisible: { id: "picture-picker-button" }
- tapOn: { id: "picture-picker-button" }
- assertVisible:
    point: 0%,23%
- assertVisible: "Photo taken on Dec 25, 2025 2:17 PM"
- tapOn: "Photo taken on Dec 25, 2025 2:17 PM"
- assertVisible:
    id: "ImageView_image"
- assertVisible: "CROP"
- tapOn: "CROP"
- assertVisible: "image"
- tapOn: "image"
- assertVisible: "✕"
- tapOn: "✕"



