appId: com.phuocng23000.sdchat
---
- launchApp
- extendedWaitUntil:
    visible: "Chat.*"
    timeout: 50000
- assertVisible: ".*Android Simulator.*"
- tapOn: ".*Android Simulator.*"
- assertVisible: "Android Simulator"
- assertVisible: { id: "message-input" }
- assertVisible: { id: "send-button" }
- tapOn: { id: "message-input" }
- inputText: "Testing message"
- tapOn: { id: "send-button" }
- assertVisible: "Testing message"
