appId: com.phuocng23000.sdchat
---
- launchApp
- extendedWaitUntil:
    visible: "Chat.*"
    timeout: 50000
- assertVisible: ".*Android Simulator.*"
- tapOn: ".*Android Simulator.*"
- assertVisible: "Android Simulator"
- longPressOn: "Testing message"
- assertVisible:
    point: 6%,23%
- assertVisible: "👍"
- tapOn: "👍"
- tapOn: "Navigate up"
- tapOn: ".*Android Simulator.*"
- assertVisible: "👍"
